<resources>
    <string name="app_name">EventTicket</string>
    <string name="splash">Event Ticket</string>
    <string name="version">Versão</string>
    <string name="email">Email</string>
    <string name="password">Senha</string>
    <string name="login">Entrar</string>
    <string name="register">Cadastrar</string>
    <string name="registerTitle">CADASTRO</string>
    <string name="user">Usuário</string>
    <string name="welcome">Olá usuário</string>
    <string name="logout">Log Out</string>
    <string name="searchTxt">Filtrar por:</string>
    <string name="registerEvent">Cadastrar Evento</string>
    <string name="eventList">Ver eventos</string>
    <string name="welcomeAdmin">Bem vindo!!</string>
    <string name="titleAdmin">Escolha a ação que deseja:</string>
    <string name="titleRegisterEvent">Insira os dados do evento:</string>
    <string name="name">Nome do evento</string>
    <string name="description">Descrição</string>
    <string name="local">Cidade</string>
    <string name="locate">Endereço</string>
    <string name="date">Data</string>
    <string name="hour">Horário</string>
    <string name="artist">Participação</string>
    <string name="genre">Gênero</string>
    <string name="nameExample">Nome do evento</string>
    <string name="localExample">Cidade:</string>
    <string name="locateExample">Endereço:</string>
    <string name="dateExample">Data:</string>
    <string name="hourExample">Horário:</string>
    <string name="genreExample">Gênero:</string>
    <string name="info">Mais informações</string>

    <string-array name="list_genre">
        <item>Casual</item>
        <item>Formal</item>
        <item>Festa</item>
    </string-array>
    <string-array name="list_city">
        <item>Fortaleza</item>
        <item>São Paulo</item>
        <item>Rio de Janeiro</item>
    </string-array>
    <string-array name="list_search">
        <item>Todos</item>
        <item>Cidade</item>
        <item>Gênero</item>
        <item>Data</item>
    </string-array>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>