<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="32dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tx_nameEvent"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:text="@string/name"
            android:textColor="@color/secondaryVari"
            android:textSize="20sp" />

        <ImageButton
            android:id="@+id/btn_edit"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="5"
            android:background="@drawable/transparent_bg"
            android:visibility="gone"
            app:srcCompat="@drawable/ic_edit"
            tools:ignore="SpeakableTextPresentCheck" />

        <ImageButton
            android:id="@+id/btn_remove"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="5"
            android:background="@drawable/transparent_bg"
            android:visibility="gone"
            app:srcCompat="@drawable/ic_delete"
            tools:ignore="SpeakableTextPresentCheck" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tx_genreLabel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="6"
            android:text="@string/genreExample"
            android:textColor="@color/primaryVari"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/tx_genreEvent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/genre"
            android:textColor="@color/primaryApp"
            android:textSize="16sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tx_localLabel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="6"
            android:text="@string/localExample"
            android:textColor="@color/primaryVari"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/tx_localEvent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/local"
            android:textColor="@color/primaryApp"
            android:textSize="16sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tx_dateLabel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="8"
            android:text="@string/dateExample"
            android:textColor="@color/primaryVari"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/tx_dateEvent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/date"
            android:textColor="@color/primaryApp"
            android:textSize="16sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tx_hourLabel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="6"
            android:text="@string/hourExample"
            android:textColor="@color/primaryVari"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/tx_hourEvent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/hour"
            android:textColor="@color/primaryApp"
            android:textSize="16sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical">

        <Button
            android:id="@+id/btn_info"
            android:layout_width="200dp"
            android:layout_height="38dp"
            android:background="@drawable/rounded_bg_orange"
            android:text="@string/info"
            tools:ignore="TouchTargetSizeCheck" />

        <View
            android:id="@+id/view10"
            android:layout_width="match_parent"
            android:layout_height="3dp"
            android:layout_marginTop="7dp"
            android:background="@color/primaryVari" />
    </LinearLayout>

</LinearLayout>