<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/darkColor"
    tools:context=".activities.RegisterEventActivity">

    <View
        android:id="@+id/view8"
        android:layout_width="0dp"
        android:layout_height="3dp"
        android:layout_marginTop="64dp"
        android:background="@color/primaryVari"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tx_registerEventTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/rounded_bg_orange"
        android:text="@string/registerEvent"
        android:textColor="@color/white"
        android:textSize="34sp"
        app:layout_constraintBottom_toTopOf="@+id/view8"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/titleRegisterEvent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/titleRegisterEvent"
        android:textColor="@color/white"
        android:textSize="24sp"
        app:layout_constraintEnd_toStartOf="@+id/guideline30"
        app:layout_constraintStart_toStartOf="@+id/guideline29"
        app:layout_constraintTop_toBottomOf="@+id/view8" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline29"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="50dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline30"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_end="50dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline31"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="170dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline32"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_end="170dp" />

    <View
        android:id="@+id/view9"
        android:layout_width="wrap_content"
        android:layout_height="3dp"
        android:layout_marginBottom="64dp"
        android:background="@color/primaryVari"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <View
        android:id="@+id/view10"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@drawable/rounded_trasparent_bg_orange"
        app:layout_constraintBottom_toTopOf="@+id/guideline32"
        app:layout_constraintEnd_toStartOf="@+id/guideline30"
        app:layout_constraintStart_toStartOf="@+id/guideline29"
        app:layout_constraintTop_toTopOf="@+id/guideline31" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline33"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="80dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline34"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_end="80dp" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayout6"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:textColorHint="@color/black"
        app:layout_constraintEnd_toStartOf="@+id/guideline34"
        app:layout_constraintStart_toStartOf="@+id/guideline33"
        app:layout_constraintTop_toTopOf="@+id/guideline31">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_nameEvent"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@drawable/rounded_bg_white"
            android:hint="@string/name"
            android:singleLine="true"
            android:textColor="@color/black" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayout7"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:textColorHint="@color/black"
        app:layout_constraintEnd_toStartOf="@+id/guideline34"
        app:layout_constraintStart_toStartOf="@+id/guideline33"
        app:layout_constraintTop_toBottomOf="@+id/textInputLayout6">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_descriptionEvent"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@drawable/rounded_bg_white"
            android:hint="@string/description"
            android:textColor="@color/black" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayout8"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:textColorHint="@color/black"
        app:layout_constraintEnd_toStartOf="@+id/guideline34"
        app:layout_constraintStart_toStartOf="@+id/guideline33"
        app:layout_constraintTop_toBottomOf="@+id/textInputLayout7">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_dateEvent"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@drawable/rounded_bg_white"
            android:hint="@string/date"
            android:textColor="@color/black" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:textColorHint="@color/black"
        app:layout_constraintEnd_toStartOf="@+id/guideline34"
        app:layout_constraintStart_toStartOf="@+id/guideline33"
        app:layout_constraintTop_toBottomOf="@+id/textInputLayout8">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_hourEvent"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@drawable/rounded_bg_white"
            android:hint="@string/hour" />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/btn_RegisterEvent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/rounded_bg_orange"
        android:text="@string/register"
        android:textColor="@color/white"
        app:layout_constraintBottom_toTopOf="@+id/view9"
        app:layout_constraintEnd_toStartOf="@+id/guideline34"
        app:layout_constraintStart_toStartOf="@+id/guideline33"
        app:layout_constraintTop_toTopOf="@+id/guideline32" />
</androidx.constraintlayout.widget.ConstraintLayout>