<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/darkColor"
    tools:context=".activities.HomeAdminActivity">

    <View
        android:id="@+id/view4"
        android:layout_width="0dp"
        android:layout_height="3dp"
        android:layout_marginTop="64dp"
        android:background="@color/primaryVari"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tx_welcomeAdmin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/rounded_bg_orange"
        android:text="@string/welcomeAdmin"
        android:textColor="@color/white"
        android:textSize="34sp"
        app:layout_constraintBottom_toTopOf="@+id/view4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:id="@+id/view5"
        android:layout_width="0dp"
        android:layout_height="3dp"
        android:layout_marginBottom="64dp"
        android:background="@color/primaryVari"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline23"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="50dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline24"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_end="50dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline25"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="170dp" />

    <TextView
        android:id="@+id/tx_titleAdmin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/titleAdmin"
        android:textColor="@color/white"
        android:textSize="24sp"
        app:layout_constraintEnd_toStartOf="@+id/guideline24"
        app:layout_constraintStart_toStartOf="@+id/guideline23"
        app:layout_constraintTop_toBottomOf="@+id/view4" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline26"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_end="170dp" />

    <View
        android:id="@+id/view6"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@drawable/rounded_trasparent_bg_orange"
        app:layout_constraintBottom_toTopOf="@+id/guideline26"
        app:layout_constraintEnd_toStartOf="@+id/guideline24"
        app:layout_constraintStart_toStartOf="@+id/guideline23"
        app:layout_constraintTop_toTopOf="@+id/guideline25" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline27"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="80dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline28"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_end="80dp" />

    <View
        android:id="@+id/view7"
        android:layout_width="10dp"
        android:layout_height="0dp"
        android:background="@color/secondaryApp"
        app:layout_constraintBottom_toTopOf="@+id/guideline26"
        app:layout_constraintEnd_toStartOf="@+id/guideline28"
        app:layout_constraintStart_toStartOf="@+id/guideline27"
        app:layout_constraintTop_toTopOf="@+id/guideline25" />

    <Button
        android:id="@+id/btn_registerEvent"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:layout_marginTop="64dp"
        android:background="@drawable/rounded_bg_orange"
        android:text="@string/registerEvent"
        android:textColor="@color/white"
        android:textSize="16sp"
        app:layout_constraintEnd_toStartOf="@+id/guideline28"
        app:layout_constraintStart_toStartOf="@+id/guideline27"
        app:layout_constraintTop_toTopOf="@+id/guideline25" />

    <Button
        android:id="@+id/btn_seeEvent"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:background="@drawable/rounded_bg_orange"
        android:text="@string/eventList"
        android:textColor="@color/white"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/btn_logoutAdm"
        app:layout_constraintEnd_toStartOf="@+id/guideline28"
        app:layout_constraintStart_toStartOf="@+id/guideline27"
        app:layout_constraintTop_toBottomOf="@+id/btn_registerEvent" />

    <Button
        android:id="@+id/btn_logoutAdm"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:layout_marginBottom="64dp"
        android:background="@drawable/rounded_bg_orange"
        android:text="@string/logout"
        android:textColor="@color/white"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="@+id/view6"
        app:layout_constraintEnd_toStartOf="@+id/guideline28"
        app:layout_constraintStart_toStartOf="@+id/guideline27" />

</androidx.constraintlayout.widget.ConstraintLayout>